Fixes calendar z-index

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,8 +5,8 @@
 @layer base {
   /* Global variables */
   :root {
-    --overlay-color-light: #E0F2FEcc; /* Lighter overlay for light theme */
-    --overlay-color-carousel-light: #E0F2FE99; /* Lighter overlay for light theme */
+    --overlay-color-light: #e0f2fecc; /* Lighter overlay for light theme */
+    --overlay-color-carousel-light: #e0f2fe99; /* Lighter overlay for light theme */
     --overlay-color-dark: #384252cc; /* Darker overlay for dark theme */
     --overlay-color-carousel-dark: #38425299; /* Darker overlay for dark theme */
 
@@ -62,6 +62,8 @@
     --link-color: var(--blue-500);
     --link-color-hover: var(--blue-800);
     --link-color-carousel-hover: var(--blue-500);
+    --input-text-color: var(--gray-500);
+    --input-border-color: var(--gray-400);
   }
 
   [data-theme="dark"] {
@@ -76,32 +78,35 @@
     --link-color: var(--yellow-400);
     --link-color-hover: var(--yellow-500);
     --link-color-carousel-hover: var(--gray-800);
+    --input-text-color: var(--gray-400);
+    --input-border-color: var(--gray-700);
   }
 
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  color: var(--body-text-color) !important;
-  background-color: var(--body-bg-color) !important;
-  padding-top: 9rem;
-}
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    color: var(--body-text-color) !important;
+    background-color: var(--body-bg-color) !important;
+    padding-top: 9rem;
+  }
 
-#root, .App { /* Assuming your root or top-level React component has class 'App' */
-  display: flex;
-  flex-direction: column;
-  flex: 1; /* Allows this element to expand and contract as needed */
-}
+  #root,
+  .App {
+    /* Assuming your root or top-level React component has class 'App' */
+    display: flex;
+    flex-direction: column;
+    flex: 1; /* Allows this element to expand and contract as needed */
+  }
 
-main {
-  flex-grow: 1; /* Ensures that the main content area can expand to fill available space pushing the footer down */
-}
+  main {
+    flex-grow: 1; /* Ensures that the main content area can expand to fill available space pushing the footer down */
+  }
 
   header {
     background-color: var(--header-bg-color);
     border-bottom: 1px solid var(--border-color);
   }
-
 
   footer {
     flex-shrink: 0; /* Optional: Prevents the footer from shrinking if the content area is too large */
@@ -112,11 +117,7 @@ main {
   .content {
     flex: 1; /* Expands to take up any available space */
   }
-  /* a {
-    @apply bg-primary hover:bg-hoverPrimary text-buttonText hover:text-hoverButtonText;
+  .MuiPickersPopper-root {
+    z-index: 1300; /* Make sure this value is higher than the z-index of your search bar */
   }
-  button {
-    @apply bg-primary hover:bg-hoverPrimary text-buttonText hover:text-hoverButtonText;
-  } */
-  /* Other global styles */
 }
